syntax = "proto3";
option csharp_namespace = "Rpc.Reverse.Generated";

package ReverseRpcDemo;


service Service {
   rpc Echo(stream EchoOutput) returns (stream EchoInput);
}


message EchoInput {
  //This is probably redundant because of order-preservation guarantees,
  // but we'll use it until this system is proven robust.
  string callGuid = 1;
  string toEcho = 2;
}
 

message EchoOutput{

  //This is probably redundant because of order-preservation guarantees,
  // but we'll use it until this system is proven robust.
  //
  //During initial handshake, we put the client id in here instead.
  string callGuid = 1;

  string theEcho = 2;
}
